--- a/buildspecDeployLambda.yml
+++ b/buildspecDeployLambda.yml
@@ -7,7 +7,7 @@ phases:
       - pip install --upgrade awscli
   build:
     commands:
-      - aws lambda update-function-code --function-name generatecsvfromxls-ms --zip-file fileb://generatecsvfromxls-ms-1.0.0.jar
+      - aws lambda update-function-code --function-name My_Lambda --zip-file fileb://JenkinWar.jar
       - chmod 777 shelldev.sh
       - bash shelldev.sh
 
